<resources>
    <string name="app_name">Animations test App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="value_animator">Value Animator</string>
    <string name="view_property_animator">View Property Animator</string>
    <string name="object_animator">Object Animator</string>
    <string name="shared_view_button">shared view button</string>
    <string name="shared_button_scene_2">shared button scene 2</string>
    <string name="title">Title</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="postal_address">Postal Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>